# document_validator

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
core/: Cargo.toml
core/src/: attr.rs  error.rs  lib.rs
core/src/attr/: document.rs
document_validator/: Cargo.toml
document_validator/src/: cnpj.rs  cpf.rs  lib.rs
document_validator/tests/: derive.rs
macros/: Cargo.toml
macros/src/: lib.rs
