[package]
name = "document_validator"
version = "0.1.2"
edition = "2021"
description = "A small library to help you implement document validation"
license = "MIT"
readme = "../README.md"

[dependencies]
  document_validator_macros = { version = "0.1.0", optional = true, path = "../macros/"}

[features]
default = ["derive"]
derive = ["document_validator_macros"]

